--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/Underscore-1.8.3.js"></script>
     <script src="http://knockoutjs.com/downloads/knockout-3.2.0.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!--<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>-->
    <!-- <script src="http://knockoutjs.com/js/jquery.validate.js"></script>-->
 
@@ -22,11 +23,15 @@
 
 <body>    
     <div class="container">
-        <button data-bind='click: $root.addContact, visible: !editMode()' class="btn btn-success">Add contact</button>
-        <form  data-bind="visible: !editMode()">
-            <p>You have <span data-bind='text: contacts().length'>&nbsp;</span> contact(s)</p>
-            <table class="table table-hover" data-bind='visible: contacts().length > 0'>
-                <thead>
+        <div class="mainPage"  data-bind="visible: !editMode()">
+            <h1>Contacts</h1>
+            <button data-bind='click: $root.addContact' class="btn btn-success">Add contact</button>
+            <button data-bind='click: $root.importContact' class="btn btn-primary">Import contacts</button>
+            <!--<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#importContactsModal">Import contacts</button>-->
+            <form>
+                <p>You have <span data-bind='text: contacts().length'>&nbsp;</span> contact(s)</p>
+                <table class="table table-hover" data-bind='visible: contacts().length > 0'>
+                    <thead>
                     <tr>
                         <th>Phone
                             <button data-bind="click: $root.sortContactsBy('phone', true), enable: contacts().length > 1" type="button" class="btn-link"><span class="glyphicon glyphicon-sort-by-alphabet"></span></button>
@@ -51,34 +56,37 @@
                         <th>Sign</th>
                         <th>Notes</th>
                     </tr>
-                </thead>
-                <tbody data-bind='foreach: filterContacts'>
+                    </thead>
+                    <tbody data-bind='foreach: filterContacts'>
                     <tr>
                         <td><input class='' data-bind='value: phone' readonly/></td>
                         <td><input class='' data-bind='value: myname' readonly/></td>
                         <td><input class='' data-bind='value: city' readonly/></td>
                         <td><input class='' data-bind='value: gender' readonly/></td>
                         <td><a href='#' data-bind='click: $root.editContact' class="btn btn-success">Edit</a></td>
-                        <td><a href='#' data-bind='click: $root.removeContact' class="btn btn-success">Delete</a></td>
+                        <td><a href='#' data-bind='click: $root.removeContact' class="btn btn-warning">Delete</a></td>
                     </tr>
-                </tbody>
-            </table>            
-        </form>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+
         
 
         <div data-bind="visible: editMode">
+            <h1>Edit contact</h1>
             <div class="editContact" data-bind="with: selectedContact" >
                         <form role="form" id="editContactForm">
                             <div class="form-group">
-                                <label for="phone">Phone:</label>
+                                <label for="editPhone">Phone:</label>
                                 <input type="phone" class="form-control" id="editPhone" placeholder="Enter phone" data-bind="value: phone, css: phoneStatus, valueUpdate: 'keyup'" minlength="2" >
                             </div>
                             <div class="form-group">
-                                <label for="name">Name:</label>
+                                <label for="editName">Name:</label>
                                 <input type="text" class="form-control" id="editName" placeholder="Enter name" data-bind="value: myname, css: nameStatus, valueUpdate: 'keyup'">
                             </div>
                             <div class="form-group ui-widget">
-                                <label for="place">Place:</label>
+                                <label for="editPlace">Place:</label>
                                 <input type="text" class="form-control" id="editPlace" placeholder="Enter place"  data-bind="value: city">
                             </div>
                             <div class="form-group">
@@ -87,18 +95,62 @@
                                 <label class="radio-inline"><input type="radio" name="editGender" value="Female" id="Female" data-bind = "checked: gender">Female</label>
                             </div>
                             <div class="form-group">
-                                <label for="sign">Sign:</label>
+                                <label for="editSign">Sign:</label>
                                 <select class="form-control" id="editSign"  data-bind="options: $root.signOptions, optionsCaption: 'Not selected', value:sign, valueAllowUnset: true">
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="notes">Notes:</label>
+                                <label for="editNotes">Notes:</label>
                                 <textarea type="text" class="form-control" id="editNotes" placeholder="Enter notes" data-bind="value: notes, css: notesStatus, valueUpdate: 'keyup'"></textarea>
                             </div>
                             <button data-bind='click: $root.saveContact, enable: contactValid' class="btn btn-success">Save contact</button><!-- && nameStatus && notesStatus-->
                         </form>
 
             </div>
+        </div>
+
+<!--        <div id="importContactsModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                &lt;!&ndash; Modal content&ndash;&gt;
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Import contacts</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group importContacts">
+                            <textarea class="importContacts" placeholder="Add contacts here"  rows="5" data-bind="value: importText"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button data-bind="click: saveImport" class="btn btn-success">Import</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+                        <div class="importExample">
+                            <h4>Import contacts example</h4>
+                            <p>
+                                0888104744	Петър Иванов	Варна	м	Везни	Този телефон ми го даде Симо на пловдиския панаир! <br/>
+                                029204473	Минчо	София	м	Скорпион<br/>
+                                0878663098	Ивайла	Варна	ж	Рак	служебен<br/>
+                                0898226184	Теодор Димитров	Пловдив	м	Козирог	<br/>
+                                032265401	Александър Станимиров	София	м	Телец<br/>
+                                0885328559	Валентина Петрова	София	ж	Козирог	служебен от 2014-та<br/>
+
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>-->
+
+        <div data-bind="visible: importMode">
+            <h1>Import contacts</h1>
+            <textarea class="importContacts" placeholder="Add contacts here"  rows="5" data-bind="value: importText">
+
+            </textarea>
+            <button data-bind="click: saveImport" class="btn btn-success">Import</button>
+            <button data-bind="click: closeImport" class="btn btn-default">Close</button>
         </div>
     </div>
     <script src="js/script.js"></script>
